# sentimentofx

./: .gitignore  Dockerfile  pyproject.toml
api/: main.py
helm/sentimentofx/: Chart.yaml
helm/sentimentofx/templates/: deployment.yaml  secret.yaml  service.yaml  values.yaml
sentimentofx/: main.py
sentimentofx/appdb/: db.py  models.py  schemas.py
sentimentofx/model/: predict.py
